language/move-lang/tests/move_check/expansion/spec_schema_member_conflicts.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:7:12
  │
4 │     spec schema Foo<T> {
  │                 --- Alias previously defined here
  ·
7 │     struct Foo {}
  │            ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:14:17
   │
11 │     spec schema Foo<T> {
   │                 --- Alias previously defined here
   ·
14 │     spec schema Foo<T> {
   │                 ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:23:9
   │
20 │     spec schema Foo<T> {
   │                 --- Alias previously defined here
   ·
23 │     fun Foo() {}
   │         ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:31:13
   │
27 │     spec schema Foo<T> {
   │                 --- Alias previously defined here
   ·
31 │         fun Foo(): bool { false }
   │             ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

